# thalamus

./: )  );  .claudeignore  .cloudflareignore  .env.local  .gitignore  AGENT_FIX_APPLIED.md  AI_IMPROVEMENTS.md  API.md  ARCHITECTURE.md  BILLING_FIX_APPLIED.md  BRANCH_SYSTEM_REDESIGN.md  CLAUDE.md  CODE_MODE_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIX_APPLIED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SETUP.md  DOWNLOAD_INSTRUCTIONS.md  EVERYTHING_FUNCTIONAL.md  FINAL_SOLUTION_SUMMARY.md  FINAL_TEST_REPORT.md  FIX-AND-PUSH.bat  FIX-AND-PUSH.ps1  FIXES_APPLIED.md  GEMINI_KEYS_STATUS.md  GEMINI_KEYS_UPDATED.md  GITHUB_SYNC_SETUP.md  GIT_BRANCH_CREATION.md  HACKER_AGENT_FIX.md  HANDOVER.md  HOW_TO_DEPLOY_VM_LAUNCHER.md  IMPLEMENTATION_COMPLETE.md  MESSAGE_PERSISTENCE_FIX.md  MINOREDIT_FIX.md  OBSCURE_REPO_STRATEGY.md  PROJECT_CREATION_FLOW.md  PROJECT_HOME_SCREEN.md  QEMU_64BIT_INTEGRATION.md  (+60 more)
.beads/: issues.jsonl
.claude/: settings.json
desktop-app/: index.html
dist-desktop/: resources.neu  resources.neu.bak
docs/: README.md  agentoverflow.md  ai-pipeline.md  architecture.md  auth.md  backend.md  deployment.md  desktop-app.md  development.md  frontend.md
electron-app/: main.js  package.json  preload.js
isolate/: index.html  manifest.webmanifest
public/: _headers  manifest.webmanifest  robots.txt  sitemap.xml
qemu-bridge/: INSTALL.md  QUICK_DEPLOY.sh  README.md  build-executable.md  package-lock.json  package.json
src/: main.tsx  (+2 more)
thalamus-native/ThalamusApp/: App.xaml  App.xaml.cs  AutoUpdateSystem.cs  CMakeLists.txt  IsoLibrary.cs  MainWindow.xaml  MainWindow.xaml.cs  QemuBridgeManager.cs  SandboxView.xaml  SandboxView.xaml.cs  ThalamusApp.csproj  VncIntegration.cs  VncViewerControl.cs
thalamus-native/ThalamusApp/Auth/: AuthManager.cs  LoginHandler.cs  LoginWindow.xaml  LoginWindow.xaml.cs
thalamus-native/ThalamusApp/Controls/: BuyCreditsWindow.xaml  BuyCreditsWindow.xaml.cs  HtmlToWpf.cs  MessageBubble.xaml  MessageBubble.xaml.cs  SponsoredAdCard.xaml  SponsoredAdCard.xaml.cs
thalamus-native/ThalamusApp/Modes/: ChatView.xaml  ChatView.xaml.cs  CodeView.xaml  CodeView.xaml.cs  ResearchView.xaml  ResearchView.xaml.cs  StudyView.xaml  StudyView.xaml.cs
thalamus-native/ThalamusApp/Services/: ConversationStore.cs  ConvexClient.cs  StreamingClient.cs  ThemeManager.cs
thalamus-native/ThalamusApp/Styles/: Theme.Light.xaml  Theme.xaml
thalamus-native/ThalamusApp/resources/: resources.qrc  style.qss  version.rc
thalamus-native/ThalamusApp/src/: AuthDialog.cpp  AuthDialog.h  AutoUpdater.cpp  AutoUpdater.h  ChatView.cpp  ChatView.h  CodeModeView.cpp  CodeModeView.h  ConvexClient.cpp  ConvexClient.h  FileTreeWidget.cpp  FileTreeWidget.h  MainWindow.cpp  MainWindow.h  MarkdownRenderer.cpp  MarkdownRenderer.h  NotificationManager.cpp  NotificationManager.h  OSSelectorDialog.cpp  OSSelectorDialog.h  ResearchView.cpp  ResearchView.h  Settings.cpp  Settings.h  StudyView.cpp  StudyView.h  VMBridgeManager.cpp  VMBridgeManager.h  VMSandboxView.cpp  VMSandboxView.h  VNCWidget.cpp  VNCWidget.h  main.cpp  test_persist.cpp  test_verify.txt
(+2180 files in other folders)
